subjects/FormalLanguages/formal_languages/lexer/tests/negative/nonexist_binop.l


read x
read y 

write x # y
